clusters/cl01tl/manifests/matrix-synapse/HTTPRoute-matrix-synapse.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-synapse
  labels:
    helm.sh/chart: matrix-synapse-3.12.39
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/instance: matrix-synapse
    app.kubernetes.io/version: "1.162.0"
    app.kubernetes.io/managed-by: Helm
  namespace: matrix-synapse
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "alexlebens.dev"
    - "matrix.alexlebens.dev"
  rules:
    - backendRefs:
        - kind: Service
          name: matrix-synapse
          port: 8008
      timeouts:
        request: 60s
        backendRequest: 60s
      matches:
        - path:
            type: PathPrefix
            value: /_matrix
        - path:
            type: PathPrefix
            value: /_synapse
    - backendRefs:
        - kind: Service
          name: matrix-synapse-wellknown-lighttpd
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
      matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix
